--- a/RestaurantsWebApp_AdamNeumiller/Views/Home/Index.cshtml
+++ b/RestaurantsWebApp_AdamNeumiller/Views/Home/Index.cshtml
@@ -3,6 +3,7 @@
 }
 @model IEnumerable<string>  
 
+<!--This is the code for the Index Page-->
 <div class="text-center">
     <h1 class="display-4">Provo Eat's Top 5 Picks</h1>
 
