--- a/RestaurantsWebApp_AdamNeumiller/Views/Home/Index.cshtml
+++ b/RestaurantsWebApp_AdamNeumiller/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
         @foreach (string r in Model)
         {
             
-            <ul>@r</ul>
+            <ul>@Html.Raw(r) </ul>
 
             
         }
